# ChangeLog for app-misc/calculate-install-gui
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.9999.ebuild:
  Fix directory for compiling.

  28 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.9999.ebuild:
  Add depent of sys-apps/parted.

  27 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-gui-2.2.9999.ebuild:
  Add qtermwidget to dependence.

*calculate-install-gui-2.2.9999 (25 May 2010)

  25 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-gui-2.2.9999.ebuild, +metadata.xml:
  Add live ebuild for calculate-install-gui

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-install-2.2.9999.ebuild:
  Fix git path.

*calculate-install-9999 (19 Apr 2010)

  19 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-install-9999.ebuild, +metadata.xml:
  Add live ebuild.
