@@ -1,3 +1,4 @@
+EBUILD calculate-install-gui-2.2.0.0_p20100823.ebuild 746 RMD160 de35b67c2aa470ab89314b186153bc5d8799681f SHA1 5cd2effc4598a71f5a61a19adc240efdf6716097 SHA256 9a3c057ca8d8d779d7faaeca8c923029c4016118bfa85453a8bba3d70318b89e
 EBUILD calculate-install-gui-2.2.9999.ebuild 700 RMD160 523695d636602b4c39ded773b5b28e70d169866b SHA1 31b061fd8d18bd72b0532a0da34ed516360efda5 SHA256 ec0e5c94233f4bc20aa839892d619625d560e51772f89e55a1d4c7d56501aa7a
-MISC ChangeLog 1025 RMD160 07610bf40eeac71e88bb2a9c616e864c385506c0 SHA1 cfbdb0a12d6aa4de5797274bce8f0b5cfeddf16b SHA256 dc2c625f37edd78b89c8083841bf4104f208bd75f91ce5fd06e7f7b03111c085
+MISC ChangeLog 1209 RMD160 62bc4307f53fc4865a8a328d3a9266d958ae4b78 SHA1 633c13c1d5aaf13e17ffe81402240fa08df3bb16 SHA256 c43b3a038f76e9d2adf0a5c5862765a7dca4392d14f213a872bc9a6df9f20854
 MISC metadata.xml 319 RMD160 c12d856d94a4bbba48275f44c4e9a0eae1ac6f21 SHA1 cddfe781ee5b88c7f5c94d7c5f03a07e61ae3336 SHA256 2a18634b4a257808c269e8c986462b316780c4f8b9a19c7c8b733fa3310a4147
