@@ -11,6 +11,7 @@
 ~sys-apps/calculate-lib-2.2.0.0_p20100813 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100812 amd64 x86
 ~sys-apps/calculate-install-2.2.0.0_p20100819 amd64 x86
+~sys-apps/calculate-install-gui-2.2.0.0_p20100823 amd64 x86
 ~sys-apps/calculate-client-2.2.0.0_p20100819 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100819 amd64 x86
 ~sys-apps/calculate-lib-2.2.0.0_p20100819 amd64 x86
