@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.0_p20100823 (24 Aug 2010)
+
+  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-install-gui-2.2.0.0_p20100823.ebuild:
+  Daily update.
+
   22 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   calculate-install-gui-2.2.9999.ebuild:
   Fix directory for compiling.
